# comet

./: .clang-format  CMakeLists.txt  LICENSE  README.md  README_zh.md
include/: comet.hpp
include/comet/: traits.hpp
src/: comet.cpp
tests/: device.cpp  device.h  main.cpp
